--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -13,7 +13,12 @@
             </div>
         </div>
 
-        <div class="pt-16">
+        <div class="pt-12 text-green-700">
+            <a  href="https://pretix.utxo.cz/utxo-camp/24/"><button class="py-2 px-3 border border-green-200 bg-green-100 mr-3 hover:bg-green-200">Buy Genesis Ticket</button></a>
+            <div class="text-base inline-block text-sm">Price: 1 EUR (super early-bird!)</div>
+        </div>
+
+        <div class="pt-8">
             <p><strong>Open Nature:</strong> The UTXO Camp is open to everyone. It is a collaborative environment where participants ranging from cryptocurrency enthusiasts, programmers, fintech experts, artists, to activists gather and exchange ideas.</p>
             <p><strong>Broad Scope of Topics:</strong> It covers a wide array of topics, not just related to cryptocurrencies and blockchain, but also societal implications of these technologies, financial markets, art, and culture.</p>
             <p><strong>The Setting:</strong> We breaks away from the norm by offering a hybrid solution where participants can stay in tents amidst an outdoor setting. This fosters a community-like atmosphere, with self-organized sessions adding to the collaborative experience. It's a unique blend of indoor and outdoor elements that sets this event apart.</p>
@@ -22,6 +27,9 @@
             <p><strong>Emphasis on Privacy and Security:</strong> The UTXO Camp has a strong emphasis on privacy, financial security, and the transparency of blockchain technologies. It’s not just about the technology, but also about its impact on society and how it can be used to promote freedom and financial inclusivity.</p>
             <p><strong>Community:</strong> The camp is about more than just sharing knowledge; it’s also about building a community of like-minded individuals who are passionate about cryptocurrencies and their impact on society. The UTXO Camp event creates a space for this community to come together and connect in person.</p>
             <p><strong>International:</strong> Situated in the heart of Europe, making it an easily accessible hub for international participants. This central location encourages a diverse mix of attendees from all over the world, creating a truly global community of blockchain and cryptocurrency enthusiasts. We expect thousands of visitors from all over the world.</p>
+        </div>
+        <div class="pt-8">
+            More information soon ...
         </div>
     </div>
 </div>
