--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -1,24 +1,39 @@
 ---
 ---
 
-<div class="w-full">
+<div class="w-full pb-20">
     <div class="pt-20 mx-auto max-w-2xl">
         <div class="flex">
             <div class="grow">
                 <img src="/logo.svg" class="w-64" />
             </div>
             <div class="text-right items-end text-[#033702]">
-                <div class="pt-8 sm:pt-0 font-bold text-3xl">12.-15.6.2024</div>
+                <div class="pt-8 sm:pt-0 font-bold text-3xl">12.-16.6.2024</div>
                 <div class="pt-2 text-xl">Location: TBD, Czech Republic</div>
             </div>
         </div>
 
-        <div class="pt-12 text-green-700">
-            <a  href="https://pretix.utxo.cz/utxo-camp/24/"><button class="py-2 px-3 border border-green-200 bg-green-100 mr-3 hover:bg-green-200">Buy Genesis Ticket</button></a>
+        <div class="pt-8 font-light">
+            <div class="italic">The decentralized protocol and infrastructure conference</div>
+        </div>
+
+        <div class="pt-10">
+            <h2 class="pb-4 uppercase">What to expect?</h2>
+            <ul>
+                <li>5 days</li>
+                <li>5000+ attendees</li>
+                <li>100+ communities</li>
+                <li>10+ stages</li>
+            </ul>
+        </div>
+
+        <div class="pt-8 text-green-700">
+            <a  href="https://pretix.utxo.cz/utxo-camp/24/"><button class="py-2 px-3 border border-green-200 bg-green-100 mr-3 hover:bg-green-200">Buy Pre-genesis Ticket</button></a>
             <div class="text-base inline-block text-sm">Price: 1 EUR (super early-bird!)</div>
         </div>
 
-        <div class="pt-8">
+        <div class="pt-12">
+            <!--h2 class="pb-4 uppercase">What to expect?</h2-->
             <p><strong>Open Nature:</strong> The UTXO Camp is open to everyone. It is a collaborative environment where participants ranging from cryptocurrency enthusiasts, programmers, fintech experts, artists, to activists gather and exchange ideas.</p>
             <p><strong>Broad Scope of Topics:</strong> It covers a wide array of topics, not just related to cryptocurrencies and blockchain, but also societal implications of these technologies, financial markets, art, and culture.</p>
             <p><strong>The Setting:</strong> We breaks away from the norm by offering a hybrid solution where participants can stay in tents amidst an outdoor setting. This fosters a community-like atmosphere, with self-organized sessions adding to the collaborative experience. It's a unique blend of indoor and outdoor elements that sets this event apart.</p>
@@ -28,7 +43,8 @@
             <p><strong>Community:</strong> The camp is about more than just sharing knowledge; it’s also about building a community of like-minded individuals who are passionate about cryptocurrencies and their impact on society. The UTXO Camp event creates a space for this community to come together and connect in person.</p>
             <p><strong>International:</strong> Situated in the heart of Europe, making it an easily accessible hub for international participants. This central location encourages a diverse mix of attendees from all over the world, creating a truly global community of blockchain and cryptocurrency enthusiasts. We expect thousands of visitors from all over the world.</p>
         </div>
-        <div class="pt-8">
+
+        <div class="pt-8 font-light">
             More information soon ...
         </div>
     </div>
@@ -38,4 +54,5 @@
 <style>
     p { padding-bottom: 1em; font-weight: 300; color: #033702; }
     p strong { text-decoration-style: dashed; font-size: 1.2em; }
+    ul li { list-style-type: circle; margin-left: 2em; }
 </style>
