--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -14,7 +14,7 @@
         </div>
 
         <div class="pt-8 font-light">
-            <div class="italic">The decentralized protocol and infrastructure conference</div>
+            <div class="italic">The decentralized protocol and infrastructure festival</div>
         </div>
 
         <div class="pt-10">
