--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -47,6 +47,10 @@
         <div class="pt-8 font-light">
             More information soon ...
         </div>
+
+        <div class="pt-4 font-light links">
+            Follow us on <a href="https://twitter.com/utxocamp">Twitter</a> or join the <a href="https://t.me/utxocamp">Telegram</a> group.
+        </div>
     </div>
 </div>
 
@@ -55,4 +59,6 @@
     p { padding-bottom: 1em; font-weight: 300; color: #033702; }
     p strong { text-decoration-style: dashed; font-size: 1.2em; }
     ul li { list-style-type: circle; margin-left: 2em; }
+    .links a { text-decoration: underline; }
+    .links a:hover { text-decoration: none; }
 </style>
