--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -1,9 +1,9 @@
 ---
 ---
 
-<div class="w-full pb-20">
-    <div class="pt-20 mx-auto max-w-2xl">
-        <div class="flex">
+<div class="w-full pb-20 px-6 sm:px-0">
+    <div class="pt-10 sm:pt-20 mx-auto max-w-2xl">
+        <div class="sm:flex">
             <div class="grow">
                 <img src="/logo.svg" class="w-64" />
             </div>
