--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -21,8 +21,7 @@
             <h2 class="pb-4 uppercase">What to expect?</h2>
             <ul>
                 <li>5 days</li>
-                <li>5000+ attendees</li>
-                <li>100+ communities</li>
+                <li>25+ villages</li>
                 <li>10+ stages</li>
             </ul>
         </div>
