--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -21,7 +21,7 @@
             <h2 class="pb-4 uppercase">What to expect?</h2>
             <ul>
                 <li>5 days</li>
-                <li>outdoor area 10+ ha (25+ acres)</li>
+                <li>outdoor area 25 000 m2 (6+ acres)</li>
                 <li>10+ stages</li>
             </ul>
         </div>
