--- a/src/pages/homepage.astro
+++ b/src/pages/homepage.astro
@@ -27,7 +27,7 @@
         </div>
 
         <div class="pt-8 text-green-700">
-            <a  href="https://pretix.utxo.cz/utxo-camp/24/"><button class="py-2 px-3 border border-green-200 bg-green-100 mr-3 hover:bg-green-200">Buy Pre-genesis Ticket</button></a>
+            <a  href="https://pretix.gwei.cz/utxo-camp/24/"><button class="py-2 px-3 border border-green-200 bg-green-100 mr-3 hover:bg-green-200">Buy Pre-genesis Ticket</button></a>
             <div class="text-base inline-block text-sm">Price: 1 EUR (super early-bird!)</div>
         </div>
 
